// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match snapshot 1`] = `
<div
  className="App"
>
  <h1
    className="Header"
  >
    React Wars
  </h1>
  <div
    className="ui active inverted dimmer"
  >
    <div
      className="ui text loader ui large text loader"
    >
      Fetching Your Characters
    </div>
  </div>
</div>
`;

exports[`<Char /> should match snapshot 1`] = `
<div
  className="char"
  style={
    Object {
      "backgroundColor": "black",
      "borderRadius": "10px",
      "color": "goldenrod",
      "margin": "20px",
      "width": "700px",
    }
  }
>
  <h2
    className="charName"
    style={
      Object {
        "fontFamily": "'Geostar Fill', cursive",
        "textShadow": "1px 1px 1px #fff",
      }
    }
  >
    Press the Button to Fetch a Character
  </h2>
</div>
`;

exports[`<CharList /> should match snapshot 1`] = `
<div
  className="ui active inverted dimmer"
>
  <div
    className="ui text loader ui large text loader"
  >
    Fetching Your Characters
  </div>
</div>
`;
